# client-server-application

./: README.md  pyproject.toml
src/: client.py  server.py
src/protocols/: __init__.py  echo.py  protocol.py
